--- a/Makefile.in
+++ b/Makefile.in
@@ -31,7 +31,7 @@ LOCAL_PATHS = "@LOCAL_PATHS@"
 PACKAGE   = Gauche-net-oauth2
 
 ARCHFILES = 
-SCMFILES  = $(srcdir)/net/oauth2.scm
+SCMFILES  = $(shell find $(srcdir)/net/ -name "*.scm")
 HEADERS   =
 
 TARGET    = $(ARCHFILES)
