--- a/Makefile.in
+++ b/Makefile.in
@@ -30,7 +30,7 @@ LOCAL_PATHS = "@LOCAL_PATHS@"
 # Module-specific stuff
 PACKAGE   = Gauche-net-oauth2
 
-ARCHFILES = 
+ARCHFILES =
 SCMFILES  = $(shell find $(srcdir)/net/ -name "*.scm")
 HEADERS   =
 
@@ -43,13 +43,15 @@ GAUCHE_PKGINCDIR  = "$(DESTDIR)@GAUCHE_PKGINCDIR@"
 GAUCHE_PKGLIBDIR  = "$(DESTDIR)@GAUCHE_PKGLIBDIR@"
 GAUCHE_PKGARCHDIR = "$(DESTDIR)@GAUCHE_PKGARCHDIR@"
 
-net_oauth2_SRCS = 
+net_oauth2_SRCS =
+
+TEST_LOG := test.log
 
 all : $(TARGET)
 
 check : all
-	@rm -f test.log
-	$(GOSH) -I. -I$(srcdir) $(srcdir)/test.scm > test.log
+	@rm -f $(TEST_LOG)
+	$(GOSH) -I. -I$(srcdir) $(srcdir)/test.scm > $(TEST_LOG)
 
 install : all
 	$(INSTALL) -m 444 -T $(GAUCHE_PKGINCDIR) $(HEADERS)
@@ -65,7 +67,7 @@ uninstall :
 
 clean :
 	$(GAUCHE_PACKAGE) compile --clean $(net_oauth2_SRCS)
-	rm -rf core $(TARGET) $(CLEANFILES) *~ test.log so_locations
+	rm -rf core $(TARGET) $(CLEANFILES) *~ $(TEST_LOG) so_locations
 
 distclean : clean
 	rm -rf $(CONFIG_GENERATED)
@@ -73,3 +75,6 @@ distclean : clean
 maintainer-clean : clean
 	rm -rf $(CONFIG_GENERATED)  VERSION
 
+validate :
+	@echo "Testing current setup"
+	$(GOSH) $(srcdir)/test.scm >> $(TEST_LOG)
